manifests/kubernetes/microforge.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microforge-dev-ns
  labels:
    environment: dev
