manifests/kubernetes/frontend-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: microforge-dev-ns
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: manojmdocker14/microforge-frontend-service:v1.1.0
          ports:
            - containerPort: 80
