manifests/kubernetes/login-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
  namespace: microforge-dev-ns
  labels:
    app: login-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
        - name: login-service
          image: manojmdocker14/microforge-login-service:v1.2.0
          ports:
            - containerPort: 8081
