manifests/kubernetes/metadata-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-service
  namespace: microforge-dev-ns
  labels:
    app: metadata-service
spec:
  selector:
    matchLabels:
      app: metadata-service
  template:
    metadata:
      labels:
        app: metadata-service
    spec:
      containers:
        - name: metadata-service
          image: manojmdocker14/microforge-metadata-service:v1.0.0
          ports:
            - containerPort: 8084
