manifests/kubernetes/notification-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microforge-dev-ns
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: manojmdocker14/microforge-notification-service:v1.1.0
          ports:
            - containerPort: 8083
