manifests/kubernetes/auth-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microforge-dev-ns
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
    - name: auth-service-port
      port: 8082
