manifests/kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microforge-dev-ns
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
    - name: auth-service-port
      port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microforge-dev-ns
  labels:
    app: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: manojmdocker14/microforge-auth-service:v1.1.0
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /api/auth/health
              port: 8082
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 10        
          readinessProbe:
            httpGet:
              path: /api/auth/health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
