manifests/kubernetes/frontend-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microforge-dev-ns
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
