manifests/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microforge-dev-ns
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: microforge-dev-ns
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: manojmdocker14/microforge-frontend-service:v1.1.5
          ports:
            - containerPort: 80
