manifests/kubernetes/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: microforge-dev-ns
  labels:
    app: login-service
spec:
  selector:
    app:  login-service
  type: ClusterIP
  ports:
  - name:  login-service-port
    port:  8081
    targetPort:  8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
  namespace: microforge-dev-ns
  labels:
    app: login-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        
      maxUnavailable: 0
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
        - name: login-service
          image: manojmdocker14/microforge-login-service:v1.2.0
          ports:
            - containerPort: 8081
          # livenessProbe:
          #   httpGet:
          #     path: /actuator/health 
          #     port: 8081
          #   initialDelaySeconds: 70
          #   periodSeconds: 20
          #   timeoutSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /actuator/health 
          #     port: 8081
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
