manifests/kubernetes/metadata-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-service
  namespace: microforge-dev-ns
  labels:
    app: metadata-service
spec:
  selector:
    app: metadata-service
  type: ClusterIP
  ports:
    - name: metadata-service-port
      port: 8084
