manifests/kubernetes/metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-service
  namespace: microforge-dev-ns
  labels:
    app: metadata-service
spec:
  selector:
    app: metadata-service
  type: ClusterIP
  ports:
    - name: metadata-service-port
      port: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-service
  namespace: microforge-dev-ns
  labels:
    app: metadata-service
spec:
  selector:
    matchLabels:
      app: metadata-service
  template:
    metadata:
      labels:
        app: metadata-service
    spec:
      containers:
        - name: metadata-service
          image: manojmdocker14/microforge-metadata-service:v1.1.0
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /api/metadata/health
              port: 8084
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/metadata/health
              port: 8084
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
