manifests/kubernetes/notification-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-mysql
  namespace: microforge-dev-ns
  labels:
    app: notification-mysql
spec:
  selector:
    app: notification-mysql
  type: ClusterIP
  ports:
    - name: notification-mysql-port
      port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-mysql
  namespace: microforge-dev-ns
  labels:
    app: notification-mysql
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        
      maxUnavailable: 0  
  selector:
    matchLabels:
      app: notification-mysql
  template:
    metadata:
      labels:
        app: notification-mysql
    spec:
      containers:
        - name: notification-mysql
          image: manojmdocker14/microforge-notifications-mysql:v1.0.0
          ports:
            - containerPort: 3306
          startupProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysqladmin ping -u root -p$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 15  # Wait 15s before starting the first check
            periodSeconds: 10        # Check every 10s
            failureThreshold: 30     # Allow 30 failures (Total 5 minutes of boot time)
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysqladmin ping -u root -p$MYSQL_ROOT_PASSWORD"
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysql -u root -p$MYSQL_ROOT_PASSWORD -e 'SELECT 1;'"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
