manifests/kubernetes/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: microforge-dev-ns
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  type: ClusterIP
  ports:
    - name: notification-service-port
      port: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microforge-dev-ns
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: manojmdocker14/microforge-notification-service:v1.1.0
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 45 # Increased for DB connection setup
            periodSeconds: 20
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
